Fix issue where nav corners were rounded on small devices

--- a/client/assets/css/index.scss
+++ b/client/assets/css/index.scss
@@ -36,6 +36,10 @@ body {
   border-bottom-left-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
 
+  @media (max-width: 990px) {
+    border-radius: 0;
+  }
+
   a {
     cursor: pointer;
     padding: 0.25em;
